fix(gui-v2): overflow of main container

--- a/packages/nc-gui-v2/assets/style-v2.css
+++ b/packages/nc-gui-v2/assets/style-v2.css
@@ -1,8 +1,10 @@
 html,
 body,
-#__nuxt {
-    margin: 0;
-    height: 100%;
+#__nuxt,
+.v-application__wrap {
+    margin: 0 !important;
+    height: 100vh;
+    width: 100vw;
 }
 
 html, body {
